package model.events;

public class Special extends Event {
}
