package model.venues;

public class Auditorium extends Venue {
}
