@startuml ClassDiagram
skinparam classAttributeIconSize 0

abstract class User {
    - String firstName
    - String lastName
    - String username
    - String password
    - int userID
    - String userType
    + getFirstName(): String
    + setFirstName(String firstName)
    + getLastName(): String
    + setLastName(String lastName)
    + getUsername(): String
    + setUsername(String username)
    + getPassword(): String
    + setPassword(String password)
    + getUserID(): int
    + setUserID(int userID)
    + getUserType(): String
    + setUserType(String userType)
    + login()
    + logout()
}
class Customer {
    - double moneyAvailable
    - boolean hasMembership
    - int concertsPurchased
    + getMoneyAvailable(): double
    + setMoneyAvailable(double moneyAvailable)
    + hasMembership(): boolean
    + setMembership(boolean hasMembership)
    + getConcertsPurchased(): int
    + setConcertsPurchased(int concertsPurchased)
    + purchaseTicket()
}

class Organizer {
    + createEvent()
}

class Admin {
    + addMember(User user, HashMap<String, User> userMap)
    + viewMember(String identifier, HashMap<String, User> userMap): User
    + findMembersByName(String name, HashMap<String, User> userMap): List<User>
    + updateMemberName(User user, String newFirstName, String newLastName)
    + updateMemberUsername(User user, String newUsername, HashMap<String, User> userMap): boolean
    + updateMemberPassword(User user, String newPassword)
    + deleteMember(String username, HashMap<String, User> userMap)
    + addVenue(Venue venue)
    + viewVenue(String identifier)
    + updateVenue(String identifier)
    + deleteVenue(String identifier)
    + addEvent(Event event)
    + viewEvent(String identifier)
    + updateEvent(String identifier)
    + deleteEvent(String identifier)
    + isUsernameUnique(String username, HashMap<String, User> userMap): boolean
}

abstract class Event {
    - int eventID
    - String type
    - String name
    - String date
    - String time
    - String vipPrice
    - String goldPrice
    - String silverPrice
    - String bronzePrice
    - String generalAdmissionPrice
    - Venue venue
    + getEventID(): int
    + setEventID(int eventID)
    + getType(): String
    + setType(String type)
    + getName(): String
    + setName(String name)
    + getDate(): String
    + setDate(String date)
    + getTime(): String
    + setTime(String time)
    + getVenue(): Venue
    + setVenue(Venue venue)
}

class Concert extends Event
class Sport extends Event
class Special extends Event

abstract class Venue {
    - int venueID
    - String name
    - String type
    - int capacity
    - int concertCapacity
    - double cost
    - int vipPercent
    - int goldPercent
    - int silverPercent
    - int bronzePercent
    - int generalAdmissionPercent
    - int reservedPercent
    + getVenueID(): int
    + setVenueID(int venueID)
    + getName(): String
    + setName(String name)
    + getType(): String
    + setType(String type)
    + getCapacity(): int
    + setCapacity(int capacity)
    + getCost(): double
    + setCost(double cost)
    + getVipPercent(): int
    + setVipPercent(int vipPercent)
    + getGoldPercent(): int
    + setGoldPercent(int goldPercent)
    + getSilverPercent(): int
    + setSilverPercent(int silverPercent)
    + getBronzePercent(): int
    + setBronzePercent(int bronzePercent)
    + getGeneralAdmissionPercent(): int
    + setGeneralAdmissionPercent(int generalAdmissionPercent)
    + getReservedPercent(): int
    + setReservedPercent(int reservedPercent)
}

class Arena extends Venue
class Auditorium extends Venue
class Stadium extends Venue
class OpenAir extends Venue

class RunTicketMiner {
    - DataManager dataManager
    - HashMap<String, User> userMap
    - HashMap<Integer, Venue> venueMap
    - HashMap<Integer, Event> eventMap
    - Scanner in
    - Admin admin
    + {static} main(String[] args)
    + displayMainMenu()
    + registerCustomer()
    + registerOrganizer()
    + registerAdmin()
    + customerLogin()
    + organizerLogin()
    + adminLogin()
    + manageUsers()
    + viewUsers()
    + updateUser()
    + deleteUser()
    - findUserByIdentifier(String input): User
    - printUserInfo(User u)
}

class DataManager {
    - int lastUserIDSeen
    - int lastVenueIDSeen
    - int lastEventIDSeen
    + loadUsers(String fileName): HashMap<String, User>
    + loadEvents(String fileName): HashMap<Integer, Event>
    + loadVenues(String fileName): HashMap<Integer, Venue>
    + writeEvent(String fileName)
    + writeUsers(String fileName)
    + writeVenues(String fileName)
    + generateUniqueUserId(): int
    + generateUniqueVenueId(): int
    + generateUniqueEventId(): int
}

class Logger {
    + {static} logAction(String actionDetail)
}

' --- Relationships ---

' Inheritance
User <|-- Customer
User <|-- Organizer
User <|-- Admin

' Aggregation / Composition 
DataManager "1" *-- "0...*" User : stores
DataManager "1" *-- "0...*" Event : stores
DataManager "1" *-- "0...*" Venue : stores

' Dependencies
Admin ..> User : manages
Admin ..> Venue : manages
Admin ..> Event : manages
RunTicketMiner ..> DataManager : uses
RunTicketMiner ..> Admin : uses
RunTicketMiner ..> Logger : logs actions
@enduml

